k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: psyconnect-ingress
  namespace: psyconnect
spec:
  ingressClassName: traefik
  rules:
    - host: psyconnect.chessy.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp
                port:
                  number: 80

    - host: api.chessy.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8888

    - host: ws.chessy.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 8084

    - host: psyconnect.dev
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8888
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp
                port:
                  number: 80
